<resources>
    <string name="parse_server_url">https://heinzerling.wineme.wiwi.uni-siegen.de/parse/</string>
    <string name="parse_app_id">heinzerling</string>
    <string name="parse_client_key">5ajG4MkeSiDjy7kA</string>
    <string name="office_mail">david.faerber@live.de</string>
    <string name="company_logo">iVBORw0KGgoAAAANSUhEUgAAASIAAABkCAYAAAAiyD1zAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAYdEVYdFNvZnR3YXJlAHBhaW50Lm5ldCA0LjEuNWRHWFIAABobSURBVHhe7Z0JvF1VdYf3UwzzUKDFoYBDW00plaFYQdEiUKfKFMaEDEQCpFRsLYXS2pYqogUqCIoghKRhCEOhtcUKKggy1IYIaggi2ABWQCQYpBAgBI/ru++tZL1997nnnDu+d976/35f8t65Z7r3nf2/e1h77ZBlmeM4zkBJbnQcx+knyY2O4zj9pPHPM888E5YuXRqWLVvmOPXgXnmeH3osLFuxJix7crXhxbDsiVVh2aNPCyv7wVbC9sK2zjD3/mTlts++8NKkJiO67rrrAhoaGnKcesDzvOV2YWjXQ8LQzgcOs9P+YWj3GWFo/9PC0DFXhaE5i8LQ7IW9ZoGQCc86C58NsxeuCtPnP3fTfY/vlGtELtfEkNjUtjuHMOXMEI65OoRZ/yIs6BWLhMwxTJuXiRHt4kbkcqFXbRjCu44L4dhrQph9aQhHiSF1n0VC5hiOvMSNyOVq0lv3D2HOlb0yIzeiGDcilytHO7xPmmlX9cKM3Ihi3IhcrhbCjLpfM3IjinEjcrkKtOshw31GaVNpBzeiGDcil6uE9v5oN82oPSOaMT8L0yMYcUrt2y9myPW7cU9uRC5XCW2wWQiHnh3C0YtSxlKVtozotR+7Jnvjyddlbzjp2gZvkp83mXvFQM0odU8bH3d59XtyI3K5Smq7nUOYc0UIsxemzKUK1YxoljBzQXbbA09I0cyy51evaYCmX3R7Fg6/OH1cL8Fo5L7ufPBnjfvgfl4YuacDz/tmFo6oeE9uRC5XBe05J4S513baed2WES1e/qQUzdE6at4dAzWiJQ+vGLmTdTr4C7e4EblcPdXGW4Uw5YwQZs7rpJnWNSOaNWgjesiNyOUajF45KYRNtg7hgNPa7cB2I4pxI3K52tSGm7drRm5EMW5ELlcHUjMiAjttOinciGLciFyuDrXhFiND+1ekTCeFG1GMG5HL1QVN3qdKE82NKMaNyOXqgtZbP4SDzypbK3IjimlhRL8tH++nhU+M/D9X6ES/Ifyj8EnhU8JJwgZCP7Wz8E+Cvqc3C67u6yjhM8Lpwl8I6wmx/lg4Q+B54Ln4dWF8q3ytyI0opoURfUA+WvltLd8ROtHvCS8Ler6fCtK47qsoIPY97S+4uq9bBP2MlwupLxxMSPfhuZgsjG+VrxW5EcW0MKL3y0erDwp0akQ7CIM2olmCfU8fElzd182Cfsb/K0wMI0LlakVuRDETzIjiGtF+gqv7mrhGVK5W5EYUM8GM6FDhGeExYaWwr+DqvsoY0ceF/xceF34i0CdZDxXXityIYiaYEb1K2EzYdOT/VCeqq3OVMSKpOqz9W8ArhHqouFbkRhQzwYzI1R+VMaJ6q3WtyI0oxo3I1QO5ETVqRWfm1YrciGLGkRG9WjhYIAboQuEC4VThQKFsDApNAPoi3iT8lrCxEEv34fU3Crb59krhbcJfCucJFwufFU4Q/kAoal78psB5uX47cF+bC0ViUVM+72MEaSM07vNcgfveU6BZVCTe9xsE7jd1XZq57xJOERYIjEiqyhjRVoL+LWCSEGtrQf8W2wm8LxXnfI/wN8L5wkUCHeBHC53Eh20vTBVOE/Q5+1thL8Heo32WeE74PEaLWlF6DpobUcw4MCIeDB4yOpnt/VjoeD5H4MFtpRkC+7848v8HhVg8hLy2RuC8FAD0bmGxoNdMcYewm5AnXme/F9qEY4sCSwkU/JZgP+uY+wVGEG3BjvUa4UmBz4FjjhdUewvfFew55wmqMkZEsCOvrxZWCW8RYmGiep4fCFrYDxceEPS1GO753wSenbIizu1fBf2cU9wrEF+H9Fl6SfiFgBmN1msmj9SImjI6uhHFjHEj4oF7WrD30YqHhVZGEA/fp+KIjhT0dQoINTG+7X85sq2I5wS+qVMqMrIyUPtKiW/rLwipY/K4VthESOm1gjV/ve5xQuqz4MtCVcaIygzf8+Wi+/xIoEZKZLxuK+IRgdpUkahFtTKgGJ6jI8zvHEvNaLT6YEQzL/xWFg68IAtT5/UXjEa4K3FPdTOiOYK9PmBK3xQuF/jGe1CI9+Fb/PeFlMoENFoj4lx/KtiH9GfCNwR5whoFmQKiryk/FBgRilXFiCjs1Bbi7al7poDybR7v+5DwHwKf19eFFUK8z38KqdHD2Ig+LFArtMdaaP6pemFE3xf+2vwOPxb+S+D98T4Iy7CvA6+3Es3X+BhqOdT4rhH4O98mPCvo6zyHV5vfB2ZEp1+/NNvl1OuzPT99Q1955+nD3P/4L0buZJ3GuhH9rqDVfGhlRH8k2ELIz7TZma9mRQHiPpcKui9Q4FP9IFWNiAfsqZGfMSBqA3FfCfdwrPC8oMfBbCEWzQ9qbLsWwJw4Cuatgj3nmUJKtlADBkR/WvwZ/JpwsmALFfyDECs2Ivrj7jG/EwP0ZYE5gzRnrfn3woi4Z70fjP4AIT4vtTvmEOoxyh5CSvTrxX+3G4VdhFg00Wl+6n72S3VgRjQW1WsjoppL4QK+HatAe/rvBFulzzMiCs/dgu7HtxMd0q1E7eMmQY+BVBOmqhEpjwrU6FqJmpM9hm/TTsT92/NR6FOd4e8UbKHAlDGRVnqH8HNBj6GA/45gFRsRQYf697tKaNX/0gsjUviSoaO7lT4v2GNSRou+Ktj96HQvEoZsjwE3IqNeG1G3yTOimYLdj5nZZfQ6gcKix90nxDWCdo1oilAkRlEwaz0GQ2g3SO8gwZo2zZK8wodB6X50wjOqV0bTBD0OMAar2IiUzwlF6pUR0WeX1+y24lw6IAE0W2NhxvbcPC/8DcvIvj9wIzKqixHZmg3h/1XSQ8R9CPsIVu0Y0V1Cq9ElK6r1ehy1qLIPthXNMkbr9Dz0UzGikxK1GNu0uFSoojsFPZZRKGsYKSOiplpm6L9XRnSZUEbcI9fV4xhFjHW2YM9N87qseG7ssW5ERr02Ir6heejbhT+WPV/KiLYV6HvQfaoWLOJHbN8S/QVW7RhRfI5Wsh3GGEhREyLWNgJD63oOCuifCHmi8Oi+UDWtyV8J9nhbm0oZEaNFZdQrI6IWV0Z03jPcr8dhuLFsfxfvk2evrOgK+D9Bjx+YET29anX22MpV2eNPV2P1mpdHzjCslc+92JXzoF4bETEU9Au8XiDQrQo81MS38MDp+VJGxD72mjyI/IF3KsGOwu7CE4Iez0iRVTtGRP9WWdEvpMdVNSJiZGyNCj4mtBJD5rovny0duBTo1OcTQ23qI4K9HiNIqtiI+JmAzDLqlRG1Cs2wYgDBGhHxW1a8N2J/9PUlQlXdIOjxAzOiuQu/3dhn07lXlIIlqtefc1l254+GV2hVzbj49krnYVnpjY+7IrvnkadGzrBOvTaifgzfx9/wtp+kLPYYahd2aLodI6Jwl1UnRhTHABHVWyTCCOwxVT+veH9idFSxEVGDKKteGBGDFqmgx5SKjIjmr74G/y5Ulf0SGJgRzcJADr2o8XopZgjTLlm7fLXqUMyj0nnmN6hrQGPcx9MpXMMOt7djREUjdlbtGtFHBXtN+slSUx5idSNA0iKlZK1iIyIeqax6YUQ0uZlSUUZFRkTAqb4GZfuerJjao8cPzoiqRlZzrunzm43o/FurmUfNI6tPFOw12Z9vwnbQa2wpqMaiETHNxMZXESCJCZTRfwt6HHCe1GdRBo6XErNWsRHZ14rUKyOKQwzyVGREDGLoa0A4QlUxB02PdyMyqoMRTRfsNRm6Z84TD2BV6Ljm4aDjUjXWjIjRMPbTYyj4ZYffEbUUPZbCwDc9fXipz6MImj1MZ1HFRjRfKKuxbkR8xvoaUAOtqvizdyMaUR2MiOA8e01mPXdTY8mIeI34IHst5i9VkS2ofLZ5w/ztKDaiMsF+qrFuRERJMydQXyfB/4ZCWdFstpNu3YiM6mBEfCPbiF8KdhUR70OfEOdlOkMcxzNWjIhamv1Ghbzo31aKgz8PE6qIAsXnxOdFE9bGCNXZiHidAEZ9HZjuUVaM3tlj3YiM6mBEiCF33YfCTNOsrJjPxsRH5oURu0ReZKuxYkS2oxPkaW1LdN7yPvU8VwpVxJpjRCvzeTEhltEkVZ2NCNk+HuB+yiqeQuJGZFQXI4pnQ9sh5SKxqJ89lrgkq7FgREyctef/HyEvFUcZ2flSdFaT+KyMMAc7WZhO8o0EVd2NKB45oyZe5vx/KGA89lg3IqO6GBFNqzi1RpmIXjLo2QeE++WBtBq0Ee0rUKB0H/omqkT0psSom54P+OzKFKjYtOM5fXU3IvQ1QfcBIrBbJdejQz+V9sWNyKguRoRs0imFfDc8CPG8L4yLOBxbaIA0GLEGaUQUIubO2XOTupXt9DnQR1EE+9F8itOSLhLsebn2nwmpGhmJwpg6Y/cnoVw8p28iGBHpPuKUKNwvX3xMoua+SSdME5iUtNp/SSCoPb8bkVGdjAjZB1VhRvX3BJKi0R9CZDH9G/F+eTPEB2lENpcN8DBr/E4VmBDLnDQrrmNTpygUHCZ8ksSLeXBM4LV9SkAB528dayIYESKXUioinVE18joxp8zO5Af6MW3aFzcio7oZEYpzGJXhn4W82fJxqtjUSq9xLFO3jCiutbRLyogQ22xHfxkwqrzVbjsxIrJo6nGDMiI7ebiVESEmFvM86v6t+LbApFfycuk2zJ05laPVdSNqLvRHDdqIHu69EekEVO13IYq3EzGixbcM3y48eOTuibMdpkTnIEPd8Te5hU5ashnGaT9iqcnoe0olz9dmoe5TZUa7PHVr74fcSDaqm4LMa7yPduG8NO/iTJUqwgIw2zg+KYYJnzR1WyU3Y7SS2qbW2mxO6iLphFC+RFJ5oZAmz+d54LlIzSMjIyX7YEKYYpn80wgjssn9McYi0TSln4zsj/YLE3gfywS6ANRUaarp63yeNhh0WK/bMYQ58v3TJSP6+rLHs1WrX86eevbFBqvX/DKbSs7qSgYidNGIbv4B97SmcT8/F1546eVsv3Nv7qoRMYJCdZPVCfifNnMnImaFc+n5KARVEoex/yHC3wss5cMSMp8SaG7xbVomZxBxRTzMeg92lEjFCJbuw/+pJYfyRK2EY1LvD/PQ87YL5yVy2kaLp0RBpP+DvN+kMeGzYjkhAkQx1jwjs+IaXItrct9V8kJhYvo50Bmf+ttg0vbzaF6OZ7hGqftQ40jtkyeuy/WB2l1Z8ZzypUmLgOeN2hK1+fjalwhqRDTfmkc+37xX3iKL1YxohM2PX5RtfcKV2VYfGYaf1z/msmFzSeyfpFtGNELqnibNqXhP0MKIRj5Nl8sVCZO2tc500+8t7+mqEVEr0lnva6Fmkto3jy4bUfqeEvsV4UbkmqAiJxOLdVJLpElWNsUIIlZLTQjSgyO7HdZdI+oG3TaibuFG5JqgYsTUmglxVWUVJ93fV2jWXseHcMzVbkRlcCNyTVDRT2ZDP+gwf59QJEZl9RggCLK5D+wV64Uw5YyRUbMxYkQYDcnPplyY3Xb/T6WYr9Mh59yUhf3Oz8Jh8roYVZidOL6XuBG5JrBomllTYXSOeC/W9CfCmg5qoKOeTutbBLs/I4qswdesLbcfNp3ZTSNm0H8jmrUgO/HKJdkXb/5hdvaN9zXyU1t99fuPZmfdsCz70i0PZLt94isNY0iep1e4EbkmsBhdTK2QC8RrMZ0DUsueM6TPmn1pvX16CMcmm2XQXyOiOZYTh5TSTNLPVolN6gZuRK4JLsyImKCU2eRBbFS6XwhtKq2+GReLTV2WMiEY00Y0/SI3IpdrUCIgkWkbJNIn6RlLjdNvxPJW9CUxXC8u0oi0T0WKr9PuM/JGyxQ3ohg3IperSdovRFAkSygxFalc8O1m2xTVhsCNKMaNqNai8FCQiPKmUBVFZHdLjCKRM5wpNFB2PbTxrz1mFdWGwI0oxo2o1mLBSeaoMW+OEZ78fo3uiakbZEewk5WrTJhNiakexPkwVYW8UypSnZBpkSbV2NBBcptzrkyZj8WNKMaNqNaKF21cKPRaduFBJv4yD4vUqp2I+WI6CZm171S3C2xLrW0/GE3ex2tE7eBGVFtRi9BEbLriBGk/Op283EpMECarAtf6ssAEUpqDVSYOpzR+jGi99UM45Ky8QEbFjSjGjai20iRwjP7QT6O5hVjvvlciCJAk/FynaN3+KiL/z9ECaTiYI6Yik8CfC3k5lQaj4lqRG1GMG1FtxaKBGAI1E6RJ00jW3yvRP6TTJjCNiSlqRQe3rBW5EcW4EdVS5LXW5F7T2CA6VuB3eAcbEmLI+pMC86nIwZOntwtnCyzXRNOLhTFJYsYyScTecA2Mj9xRrMJCzmeuT1ZGcki1gmtrwjryEHE8NGdAXCdyBzEDnuWRUsPsNEeZZc89kWp4iUA+IXKAI1aOIcdVvOqLivsnkRvJ94gnwsxJLPduIa3WtSI3ohg3olpK07DSR6TpahlCZ9oC2xlpSolUGGSBZJ/U4gMqmnfsQ58T2RdphvF7Hh8QmByaei2FptXYW9Bt6Tldw5LqR2MfsivGCcxIbqZJ72Mwa0xIa4skkYvFe2PkMT5W+aJAdPZoNWpF4s1jYdKrG5FrACILJUnfKSRM4LTSeVUYVGrZHGJ/NDXsFDbk6HiBfSjgZCakJnGVwIIG2qlMon5qDaTP3VEg/zh5u6UkNnGhYHNGM8EU2bXHmIiaJzUi8lRbU2A2vRorJkyNDYPFnDBj7pUFJtWoqPVYnSLo9clVTZgA/VEnCORw19fS+Yh2OiCvVuRGFONGVDtRyLSAxE0N+xrJ32O1Y0Q27aztI6ITuawo3NqUtKNinRgRa9nfK7D9UQEzjEWOc4xIr2GN6G2CfhaEQcSiCfglQY9tvr+tXz88+755Br4bUYwbUe10vUDBoFDGc6JY555CyeuphPKdGhHNQFYv4bWyRsTiCMzn4hj6baw6MSJqPnrsDDbkSJP4gzWiywS20SeUN7eM7fQ5sR/7j9akjUI44rwQPny5G1ERbkS1En082p8Rr9yq0iBHaiAk2LfqtxHRb8VyQ+xPLBC1GKtOjEjXkcN4Wy1b9VZBo8DViDBsjcGyNbSUThLYj8BNmsWjtZ/8GRorebgRtcSNqFY6VaBQAMPn5FZmWofCaBl9NboPBdiqn0ZEbUITjdGntZ0Qqx0j0vl09OmwrWgpIcyDCHD2VSPCoPW6LBZJfxLGFsN2XUwSM2tu/r3/lNSUjzFtRJ6PyNWJGL0iT44WoDKw1DTBgqp+GhEFmf0Y7s8LJ2jHiOi7YdItP7PtWqGVqEHpvmpE9rpVYJRvtMaQEV106wPZXQ+taOSrzuM7jzyVvfez38jC1Hnpc/UKN6LaiNgbLRA0zyjgKVjr3Q5HHy6oyhqRHb5vx4ho7uj1W/XftGtESE35xsZv+WL6yY8F9lUj2kPQ61IQiK3SeKYUhEsQ/8QabKP1wY8P3oiUGQuG81EXUXWJom7gRlQbMXxOwWGYmoBGDIJAvhiG7QnEIz8z+39FUNHHpEZ0EBtypM27dowIg+N1IICxlcoaEbE87GObZrrsNWvgx7FFVvY9qxERPKmjaUyVaU8bSGVz6vmp3ESDMSJqRmVIHdtr3IhqIVZk1blkV7OhhIgSZn+WfGZlU2RrRAz154lpI+xT1Yjoe9GUrNewoUB2/bBWAY0sh84+GJF2Vuty1aAR1CkRja37qRFRq9IFFGlCthJpSTBCEvHHne0hfOjUwXdWjwfciGqhEwUtTAewoYS0nwd0hI10qWoUNEdSolBjXuxTxYg4N5HPvMYUieYlmpuFQWp8UV7OIaK2eR2sEdnmVZ45kyyO0S7dT40I8f7ZRlOWkbU8qaHz/2itN0nsXFpsRw94+H484EY07sW3990ChWG5UKaAI0ap1HQowHR2I52KgcnEtRCadBq1rfuUMSLSgXxNYDsxQ9R06CRnTXrWybewbRsBMbL2oMBxGIadeU+HNIskPiHo8Ls1IkQkN9uBPEk0Tfm8uB+aeksFXtNocGtE7PuYwHY+V4Ifrbh/bRJCc1N2C3krs+aHMPtSN6Ii3IjGvWw/ClMYqogRJT1WU2nMFHQbNZ/bBDIuauAe5nOO+bmMEWlKEqDQk5qEmgamFMM1MR811JMFPZZjGC6naaid0Yz8nTvyc2xE3I8O4+vx9BmRM0nNi+yRGkYQzzVjqomaFDUzIrW5Nh3gGKCelwmzzdrhvSFnSSE3ophhI9rVjWj8ivlcWlCYllBFNvqYzm4Vy+ukJnpSgJlpz9QRfsd0YiPSOWM2DchcgW3M+9KmViuoiWhwIDUYRsW078qCGU0WyDCgv1sjQtRcGNVSg1To1Kdfh/21jynVHCXTwB2CPVZhOguTYtMrvZI29uim/iH4jPCgcI/T4HtiRN8VI5rsRjR+RfZCCiNDx1WT49Mco4OakSOOtwWKpttUgchhChupNrSWwv/038TX5Ge28RrRySoim7lHrlUE98J70mF4FedlqJ8aErUtYnZ06sXmAtdktKvZFIbFPdBvRJgDTUxME9mARiazpsS90Cxkfh6hB1yf89j3OFobyUus5tHcLHNSHHlJECNaa0JuRK66iL4mOu7pzG7Vb2ZTjdDM7Y42Et878sKiZYUcxY3IVVPR0a4Gkxc0SQ1OO9HphG+eK9au3Iiq4UbkqqkYGdPRREYH6bNiki3NUeJ9aGpppgLobmpbN6JquBG5aizMhlE1NRtG5JjOQYe6XXeNtLfd1YZiRNPEiGaLEc2Sgua0ZpobkaveolOaTIsEURI2wMgdQ/KMABK+kJenujNhRFMvkG/7S0OYucApYuq8tBGtXLkyLF68OCxZssRx6sCQsIWwrfBqYQMhtV8XuCssufuesGT5k2HJQ08JK5wCFi9fEZ55fnWzETmO4wyS5EbHcZx+ktzoOI7TT5IbHcdx+klyo+M4Tj9JbnQcx+knyY2O4zj9JLnRcRynnyQ3Oo7j9I8s/Ap8XHh3Vex7TAAAAABJRU5ErkJggg==</string>
    <string name="app_name">Außendienst</string>
    <string name="title_navi">Navigation</string>
    <string name="title_contacts">Ansprechpartner</string>
    <string name="title_edit">Bearbeiten</string>
    <string name="title_auftrag">Auftrag</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="main_menu">Hauptmenü</string>
    <string name="order_id">Auftragsnummer</string>
    <string name="elevator_id">Aufzugsnummer</string>
    <string name="signature_customer">Unterschrift Kunde</string>
    <string name="signature_employee">Unterschrift Monteur</string>
    <string name="sign_all">Alle Aufträge signieren</string>
    <string name="locked_orders">Abgeschlossene Aufträge</string>
    <string name="company_name">Heinzerling Aufzüge GmbH</string>
    <string name="company_adress">An den Weiden 27</string>
    <string name="company_city">57078 Siegen</string>
    <string name="position_short">Pos</string>
    <string name="pieces_short">Stk.</string>
    <string name="hour_short">Std.</string>
    <string name="quantity">Menge</string>
    <string name="quantity_short">Anz.</string>
    <string name="unit">Einheit</string>
    <string name="number_short">Nr.</string>
    <string name="description">Beschreibung</string>
    <string name="duration">Dauer</string>
    <string name="mechanic">Monteur</string>
    <string name="sign">Signieren</string>
    <string name="order_number">Auftrag Nummer</string>
    <string name="date">Datum</string>
    <string name="location">Standort</string>
    <string name="key_safe">Schlüsseldepot</string>
    <string name="last_maintenance">Letzte Wartung</string>
    <string name="performed_work">Ausgeführte Arbeiten</string>
    <string name="work_done">Arbeiten abgeschlossen?</string>
    <string name="remarks">Bemerkungen</string>
    <string name="close">Schließen</string>
    <string name="error_signature">Fehler beim Laden der Unterschrift.</string>
    <string name="signed_at">Signiert am</string>
    <string name="orders">Aufträge</string>
    <string name="button_open_calendar">KALENDER\nAufträge + Termine einsehen</string>
    <string name="button_open_documents">DOKUMENTE\nAbgeschlossene Berichte einsehen</string>
    <string name="save">Speichern</string>
    <string name="name">Name</string>
    <string name="change_user">Benutzer wechseln</string>
    <string name="back">Zurück</string>
</resources>