<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LockedOrders">

    <LinearLayout
        android:id="@+id/locked_orders_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/locked_orders_headline"
            android:layout_width="match_parent"
            android:layout_height="40pt"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/locked_orders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/locked_orders_orders_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/locked_orders_details_layout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/locked_orders_details_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/company_name"
                app:srcCompat="@drawable/heinzerling" />

            <TextView
                android:id="@+id/locked_orders_details_headline"
                android:layout_width="match_parent"
                android:layout_height="24pt"
                android:layout_marginTop="2pt"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locked_orders_details_text_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locked_orders_details_table_material">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/locked_orders_details_text_pos_material"
                        android:layout_width="18pt"
                        android:layout_height="wrap_content"
                        android:text="@string/position_short"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locked_orders_details_text_qty_material"
                        android:layout_width="28pt"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locked_orders_details_text_unit_material"
                        android:layout_width="28pt"
                        android:layout_height="wrap_content"
                        android:text="@string/unit"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locked_orders_details_text_name_material"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5pt"
                android:visibility="gone"
                android:id="@+id/locked_orders_details_table_mechanics">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/locked_orders_details_text_pos_mechanics"
                        android:layout_width="18pt"
                        android:layout_height="wrap_content"
                        android:text="@string/position_short"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locked_orders_details_text_qty_mechanics"
                        android:layout_width="35pt"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/locked_orders_details_text_name_mechanics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mechanic"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/locked_orders_details_text_lastmaintenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/locked_orders_details_text_work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/locked_orders_details_text_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/locked_orders_details_text_signature_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/signature_employee"/>

            <ImageView
                android:id="@+id/locked_orders_details_signature_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10pt"
                android:contentDescription="@string/signature_employee" />

            <TextView
                android:id="@+id/locked_orders_details_text_signature_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/signature_customer" />

            <ImageView
                android:id="@+id/locked_orders_details_signature_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10pt"
                android:contentDescription="@string/signature_customer" />

            <TextView
                android:id="@+id/locked_orders_details_signature_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>