<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auftragsanzeige">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_auftrag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:id="@+id/layoutAuftragAnzeige"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="8pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/heinzerlingLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company_name"
            app:srcCompat="@drawable/heinzerling" />

        <TextView
            android:id="@+id/auftragsNr"
            android:layout_width="match_parent"
            android:layout_height="24pt"
            android:layout_marginTop="2pt"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/auftragsDaten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <TableLayout
            android:id="@+id/artikelTabelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tablePos"
                    android:layout_width="18pt"
                    android:layout_height="wrap_content"
                    android:text="@string/position_short"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableMenge"
                    android:layout_width="28pt"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tableEinheit"
                    android:layout_width="28pt"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/letzteWartung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAnsprechpartnerAnzeige"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="8pt"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/auftragsNrKontakte"
            android:layout_width="match_parent"
            android:layout_height="38pt"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ansprechpartnerTabelle">
        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>