<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/headlineMain"
            android:layout_width="match_parent"
            android:layout_height="40pt"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/main_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonCalendar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="#80D8FF"
                android:onClick="openCalendar"
                android:text="@string/button_open_calendar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonBerichte"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_weight="2"
                android:background="#82B1FF"
                android:onClick="openLockedOrders"
                android:text="@string/button_open_documents"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>